cluster/apps/networking/traefik/router/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  namespace: networking
  annotations:
    hajimari.io/appName: "untangle"
    hajimari.io/enable: "true"
    hajimari.io/icon: "fire"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-rfc1918@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "untangle.${SECRET_DOMAIN}"
  rules:
    - host: "untangle.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  number: 8080
